--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL = "mongodb+srv://pulokuzzaman2014:ecomPass@cluster0.m69c2l4.mongodb.net/e-com"
+NEXTAUTH_SECRET = "sSxL8sBJZIICpyfPMyLzutiPKbY/9MlG4pdIk00CtSY="
