google sign in integrated

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 DATABASE_URL = "mongodb+srv://pulokuzzaman2014:ecomPass@cluster0.m69c2l4.mongodb.net/e-com"
 NEXTAUTH_SECRET = "sSxL8sBJZIICpyfPMyLzutiPKbY/9MlG4pdIk00CtSY="
+GOOGLE_CLIENT_ID = 667160333958-57io8dalem4eej29pn398thovgsac8b7.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
