--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/x-data-grid": "^6.19.6",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.10.2",
+    "@stripe/react-stripe-js": "^2.5.1",
+    "@stripe/stripe-js": "^3.0.7",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
@@ -36,6 +38,7 @@
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "stripe": "^14.19.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   },
