--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
     "firebase": "^10.8.1",
+    "micro": "^10.0.1",
     "moment": "^2.30.1",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
