--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "postcss": "8.4.33",
+    "primereact": "^10.5.1",
     "query-string": "^9.0.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
